# cobra

./: Cargo.toml  LICENSE
.github/workflows/: ci.yaml
crates/cobra/: Cargo.toml
crates/cobra-bindless/: Cargo.toml  README.md
crates/cobra-bindless-macro/: Cargo.toml  README.md
crates/cobra-bindless-macro/src/: lib.rs
crates/cobra-bindless/src/: device_pointer.rs  image_handle.rs  lib.rs
crates/cobra-shader-builder/: Cargo.toml  README.md
crates/cobra-shader-builder/src/: lib.rs  mod_node.rs  shader_builder.rs
crates/cobra/src/: bindless_shader.rs  buffer.rs  context.rs  filling_span.rs  image.rs  lib.rs  queue.rs  sampler.rs  swapchain.rs
crates/egui-cobra/: Cargo.toml  build.rs
crates/egui-cobra-shaders/: Cargo.toml
crates/egui-cobra-shaders/src/: lib.rs
crates/egui-cobra/src/: lib.rs  shader.rs
