[package]
name = "cobra-bindless-macro"
description = "Helper proc macro for cobra-bindless"
categories = ["graphics", "no-std::no-alloc"]
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"

[lints]
workspace = true