[package]
name = "cobra-bindless"
description = "Contains structs to be used in shaders with Cobra"
categories = ["graphics", "no-std::no-alloc"]
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
spirv-std = { workspace = true }
cobra-bindless-macro = { path = "../cobra-bindless-macro" }

[lints]
workspace = true
