[package]
name = "egui-cobra-shaders"
description = "shaders for the Cobra egui backend"
categories = ["graphics", "gui"]
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
spirv-std = { workspace = true }
glam = { version = "0.30.8", default-features = false, features = ["libm"] }
cobra-bindless = { path = "../cobra-bindless" }

[lints]
workspace = true