[package]
name = "egui-cobra"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
cobra-shader-builder = { path = "../cobra-shader-builder" }

[dependencies]
cobra = { path = "../cobra" }
egui-cobra-shaders = { path = "../egui-cobra-shaders" }
egui = "0.32.3"

[lints]
workspace = true
